--- a/package.json
+++ b/package.json
@@ -1,36 +1,56 @@
 {
   "name": "angular-phonecat",
-  "private": true,
-  "version": "0.0.0",
   "description": "A tutorial application for AngularJS",
+  "version": "0.0.0",
+  "private": true,
   "repository": "https://github.com/angular/angular-phonecat",
   "license": "MIT",
+  "dependencies": {
+    "angular": "^1.5.0",
+    "angular-animate": "^1.5.0",
+    "angular-mocks": "^1.5.0",
+    "angular-resource": "1.5.x",
+    "angular-route": "^1.5.8"
+  },
   "devDependencies": {
-    "bower": "^1.7.7",
+    "babel-core": "^6.14.0",
+    "babel-loader": "^6.2.5",
+    "babel-preset-es2015": "^6.14.0",
+    "copy-webpack-plugin": "^3.0.1",
+    "css-loader": "^0.23.0",
+    "eslint": "^3.4.0",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "file-loader": "^0.9.0",
+    "html-webpack-plugin": "^2.7.1",
     "http-server": "^0.9.0",
     "jasmine-core": "^2.4.1",
-    "karma": "^0.13.22",
-    "karma-chrome-launcher": "^0.2.3",
-    "karma-firefox-launcher": "^0.1.7",
-    "karma-jasmine": "^0.3.8",
-    "protractor": "^3.2.2"
+    "karma": "^1.2.0",
+    "karma-chrome-launcher": "^2.0.0",
+    "karma-firefox-launcher": "^1.0.0",
+    "karma-jasmine": "^1.0.2",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-spec-reporter": "0.0.26",
+    "karma-webpack": "^1.8.0",
+    "postcss-loader": "^0.9.1",
+    "protractor": "^3.2.2",
+    "raw-loader": "^0.5.1",
+    "rimraf": "^2.5.1",
+    "style-loader": "^0.13.0",
+    "webpack": "^1.13.2",
+    "webpack-dashboard": "^0.1.8",
+    "webpack-dev-server": "^1.14.1"
   },
   "scripts": {
-    "postinstall": "bower install",
-
+    "build": "rimraf dist && webpack --bail --progress --profile",
+    "server": "webpack-dashboard -- webpack-dev-server --history-api-fallback --inline --progress",
     "prestart": "npm install",
-    "start": "http-server ./app -a localhost -p 8000 -c-1",
-
+    "start": "npm run server",
     "pretest": "npm install",
-    "test": "karma start karma.conf.js",
-    "test-single-run": "karma start karma.conf.js --single-run",
-
+    "test": "node_modules/.bin/karma start karma.conf.js",
+    "test-single-run": "node_modules/.bin/karma start karma.conf.js --single-run",
     "preupdate-webdriver": "npm install",
     "update-webdriver": "webdriver-manager update",
-
     "preprotractor": "npm run update-webdriver",
-    "protractor": "protractor e2e-tests/protractor.conf.js",
-
-    "update-index-async": "node -e \"var fs=require('fs'),indexFile='app/index-async.html',loaderFile='app/bower_components/angular-loader/angular-loader.min.js',loaderText=fs.readFileSync(loaderFile,'utf-8').split(/sourceMappingURL=angular-loader.min.js.map/).join('sourceMappingURL=bower_components/angular-loader/angular-loader.min.js.map'),indexText=fs.readFileSync(indexFile,'utf-8').split(/\\/\\/@@NG_LOADER_START@@[\\s\\S]*\\/\\/@@NG_LOADER_END@@/).join('//@@NG_LOADER_START@@\\n'+loaderText+'    //@@NG_LOADER_END@@');fs.writeFileSync(indexFile,indexText);\""
+    "protractor": "node_modules/.bin/protractor e2e-tests/protractor.conf.js"
   }
 }
